--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,14 @@
     <script src="/app.js"></script>
 </head>
 <body>
-    <%- body %>
-</body>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/login">Login</a>
+      <a href="/register">Register</a>
+      <a href="/logout">Logout</a>
+    </nav>
+    <main>
+      <%- body %>
+    </main>
+  </body>
 </html>
