--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -2,6 +2,8 @@
     <input type="text" name="name" placeholder="enter name">
     <input type="text" name="username" placeholder="enter username">
     <input type="password" name="password" placeholder="password">
+    <input type="text" name="location" placeholder="location">
+    <input type="text" name="weapon_of_choice" placeholder="weapon">
     <button type="submit">register</button>
 </form>
 
