--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -3,7 +3,7 @@
     <input type="text" name="username" placeholder="enter username">
     <input type="password" name="password" placeholder="password">
     <input type="text" name="location" placeholder="location">
-    <input type="text" name="weapon_of_choice" placeholder="weapon">
+    <input type="text" name="weapon" placeholder="weapon">
     <button type="submit">register</button>
 </form>
 
