--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
 
 <% if (!user.active_quest) { %>
   <a href="/quests/accept" class="btn">Accept Quest</a>
+<% } else { %>
+  <a href="/quests/complete" class="btn">Quest Completed</a>
 <% } %>
-
-
 
 <!-- This is where the timeline will be added later -->
 
