--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/login">Login</a>
+      <a href="/index">timnline</a>
       <a href="/register">Register</a>
       <a href="/logout">Logout</a>
     </nav>
