--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,87 @@
-/* Image styling */
-.profile-image {
-    width: 150px; /* Set width */
-    height: 150px; /* Set height */
-    border-radius: 50%; /* Make it round */
-    border: 3px solid #f1f1f1; /* Add border */
-    object-fit: cover; /* Cover the entire container without stretching the image */
-}
-
-/* Simple Hero styling */
-.hero {
-    background-color: #282c34; /* Background color */
-    color: #61dafb; /* Text color */
-    padding: 20px; /* Padding */
-    text-align: center; /* Center text */
-    border-radius: 5px; /* Rounded corners */
-}
-
-/* Add some spacing between elements */
-.hero h1,
-.hero p {
-    margin-bottom: 15px;
-}
+body {
+    background-image: url('/images/wp10657115.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed; 
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  /* Style the navigation bar */
+  nav {
+    background-color: gold;
+    color: white;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  /* Style the navigation links */
+  nav a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    margin: 0 10px;
+  }
+  
+  /* Style the landing-hero div */
+  .landing-hero {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* background-image: url('/images/old-paper-texture_23-2147509496.avif'); */
+    background-size: cover;
+    color: black;
+  }
+  
+  /* Style the buttons in the landing-hero div */
+  .landing-hero button {
+    color: gray;
+    background-color: rgb(0, 53, 247);
+    border: 10px solid rgb(3, 4, 9);
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+  }
+  
+  .landing-hero button:hover {
+    background-color: #4a90e2;
+  }
+  
+  /* Media query for screens with a maximum width of 600px */
+  @media (max-width: 600px) {
+    /* Modify the nav bar for mobile */
+    nav {
+      flex-direction: column;
+      align-items: center;
+      padding: 5px;
+    }
+  
+    /* Modify navigation links for mobile */
+    nav a {
+      margin: 5px 0;
+    }
+  
+    /* Modify buttons in the landing-hero div */
+    .landing-hero button {
+      padding: 8px 16px;
+    }
+  }
+  
+  .timeline-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    margin: 40px auto;
+    width: 80%;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  }
+  
