--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,4 @@
+<!-- Layout -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="/app.js"></script>
+    <script src="/server.js"></script>
 </head>
 <body>
     <nav>
       <a href="/">Home</a>
       <a href="/login">Login</a>
-      <a href="/index">timnline</a>
+      <a href="/timeline">timeline</a>
       <a href="/register">Register</a>
       <a href="/logout">Logout</a>
+      <a href="/index">profile</a>
     </nav>
     <main>
       <%- body %>
