--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -10,6 +10,7 @@
     <ul>
         <% users.forEach(user => { %>
             <li>
+                <img class="profile-image" src="/uploads/<%= user.image %>" alt="<%= user.name %>'s profile image">
                 <h2><%= user.name %></h2>
                 <p>Username: <%= user.username %></p>
                 <p>Location: <%= user.location %></p>
