--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -7,12 +7,15 @@
     <button type="submit">register</button>
 </form> -->
 
-<form action="/register" method="post">
+<form method="post" action="/register" enctype="multipart/form-data">
     <input type="text" name="name" placeholder="enter name">
     <input type="text" name="username" placeholder="enter username">
     <input type="password" name="password" placeholder="password">
     <input type="text" name="location" placeholder="location">
     <input type="text" name="weapon" placeholder="weapon">
+    <input type="file" name="profileImage" accept="image/*">
     <button type="submit">register</button>
 </form>
+
+
 
