--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <div class="landing-hero">
 
-<h1>Welcome to hero quest pls register for adventure</h1>
+<h1>Welcome Hero! Register or login</h1>
 <a href="/login">
 <button>login</button>
 </a>
