--- a/views/quest-completed.ejs
+++ b/views/quest-completed.ejs
@@ -10,7 +10,7 @@
     <div class="quest-completed">
         <h1>Congratulations, <%= user.username %>!</h1>
         <p>You have successfully completed your quest!</p>
-        <a href="/quests/accept" class="btn">Accept Another Quest</a>
+        <a href="/accept" class="btn">Accept Another Quest</a>
         <a href="/index" class="btn">Back to Home</a>
     </div>
 </body>
