--- a/views/specialMessage.ejs
+++ b/views/specialMessage.ejs
@@ -9,18 +9,30 @@
         }
 
         h1 {
-            color: #f2ebeb;
+            color: #000000;
         }
 
         p {
-            font-size: 18px;
-            color: #f3efef;
+            font-size: 40px;
+            color: #080808;
+            text-shadow: #000000;
         }
+        .special-message {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 20px;
+        }
+        
+
+        body
     </style>
 </head>
+<div class="special-message">
 <body>
     <h1>Happy Birthday, Christine Moore!</h1>
     <p>We are so happy to have you here! We have prepared this special message just for you:</p>
     <p>I love you, Mom!</p>
+</div>
 </body>
 </html>
