--- a/views/quest.ejs
+++ b/views/quest.ejs
@@ -1,7 +1,8 @@
+<div class="quest">
 <h1>Your Quest</h1>
 <p><strong>Description:</strong> <%= quest.description %></p>
 <p><strong>Difficulty:</strong> <%= quest.difficulty %></p>
-
+</div>
 
 <!-- <button onclick="window.location.href='/quests/accept'">Generate Another Quest</button>
 <button onclick="startQuest()">Choose This Quest</button>
