--- a/public/style.css
+++ b/public/style.css
@@ -124,3 +124,18 @@ nav a {
     font-size: 24px;
     margin-bottom: 16px;
 }
+
+.quest h1 {
+    font-size: 32px; 
+    color: white; 
+}
+.quest p {
+    background-color: rgb(0, 51, 255);
+    padding: 20px;
+    border: 10px solid #ffffff;
+    border-radius: 20px;
+    margin: 40px auto;
+    width: 80%;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    color: white;
+}
