--- a/views/quest-completed.ejs
+++ b/views/quest-completed.ejs
@@ -10,8 +10,8 @@
     <div class="quest-completed">
         <h1>Congratulations, <%= user.username %>!</h1>
         <p>You have successfully completed your quest!</p>
-        <a href="/accept" class="btn">Accept Another Quest</a>
-        <a href="/index" class="btn">Back to Home</a>
+        <a href="/accept"><button>Accept Another Quest</button></a>
+        <a href="/index"><button>back to home</button></a>
     </div>
 </body>
 </html>
