--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,8 @@ nav {
     padding: 10px;
     display: flex;
     justify-content: space-around;
+    border-bottom: 5px solid black;  /* This line adds the thin black line at the bottom */
+
 }
 
 nav a {
@@ -42,7 +44,7 @@ nav a {
 .landing-hero button {
     color: rgb(0, 0, 0);
     background-color: rgba(242, 255, 0, 0.955);
-    border: 10px solid rgb(3, 4, 9);
+    border: 5px solid rgb(3, 4, 9);
     border-radius: 5px;
     padding: 10px 20px;
     margin: 10px;
@@ -125,11 +127,22 @@ nav a {
     margin-bottom: 16px;
 }
 
-.quest h1 {
+.quest  {
     font-size: 32px; 
     color: white; 
+/* }
+.quest p { */
+    background-color: rgb(0, 51, 255);
+    padding: 20px;
+    border: 10px solid #ffffff;
+    border-radius: 10px;
+    margin: 20px auto;
+    width: 80%;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    color: white;
 }
-.quest p {
+
+.quest-completed {
     background-color: rgb(0, 51, 255);
     padding: 20px;
     border: 10px solid #ffffff;
@@ -138,4 +151,15 @@ nav a {
     width: 80%;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
     color: white;
+}
+
+.quest-completed button {
+
+    color: rgb(0, 0, 0);
+    background-color: rgba(242, 255, 0, 0.955);
+    border: 5px solid rgb(3, 4, 9);
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
 }
